--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,9 +4,11 @@ env:
 extends:
   - eslint:recommended
   - plugin:flowtype/recommended
+  - plugin:flowtype-errors/recommended
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
+  GlobalData: readonly
 parser: babel-eslint
 parserOptions:
   ecmaFeatures:
@@ -14,8 +16,9 @@ parserOptions:
   ecmaVersion: 2018
   sourceType: module
 plugins:
-  - flowtype
   - react
+  - flowtype
+  - flowtype-errors
 rules:
   indent: [error, 4, { SwitchCase: 1 }]
   no-unused-vars: [error, {
@@ -25,5 +28,7 @@ rules:
   linebreak-style: [error, unix]
   quotes: [error, single]
   semi: [error, always]
+  react/jsx-uses-vars: error
+  flowtype/require-valid-file-annotation: [error, always]
   flowtype/delimiter-dangle: [error, always]
-  flowtype/no-types-missing-file-annotation: off
+  flowtype/no-weak-types: [2, { any: false }]
