--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -31,4 +31,4 @@ rules:
   react/jsx-uses-vars: error
   flowtype/require-valid-file-annotation: [error, always]
   flowtype/delimiter-dangle: [error, always]
-  flowtype/no-weak-types: [2, { any: false }]
+  flowtype/no-weak-types: [2, { any: true }]
