--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@atlaskit/theme": "^9.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "lodash-es": "^4.17.11",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^3"
