--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@atlaskit/avatar": "^16.0.1",
     "@atlaskit/comment": "^8.0.1",
     "@atlaskit/css-reset": "^4.0.0",
+    "@atlaskit/dropdown-menu": "^8.0.0",
     "@atlaskit/field-text": "^9.0.0",
     "@atlaskit/flag": "^11.0.0",
     "@atlaskit/icon": "^17.0.0",
@@ -27,6 +28,7 @@
     "@atlaskit/select": "^9.0.1",
     "@atlaskit/spinner": "^11.0.0",
     "@atlaskit/theme": "^9.0.0",
+    "@atlaskit/tooltip": "^14.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "lodash-es": "^4.17.11",
     "query-string": "^6.5.0",
