--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@atlaskit/theme": "^9.0.0",
     "@atlaskit/tooltip": "^14.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@emotion/is-prop-valid": "^0.7.3",
     "lodash-es": "^4.17.11",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
